deployment/mcp-openshift/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ocp-mcp-server
  labels:
    app: ocp-mcp-server
spec:
  selector:
    matchLabels:
      app: ocp-mcp-server
  replicas: 1
  template:
    metadata:
      labels:
        app: ocp-mcp-server
        deployment: ocp-mcp-server
    spec:
      serviceAccountName: ocp-mcp
      containers:
      - name: ocp-mcp-server
        image: quay.io/sudash/kubernetes-mcp-server:v0.0.53-config  # quay.io/hveeradh/ocp-mcp-server:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8000
            protocol: TCP
        command: ["./kubernetes-mcp-server"]
        args: ["--sse-port", "8000"]
        resources: {}
